--- a/app/views/compute_resources/form/_kubevirt.html.erb
+++ b/app/views/compute_resources/form/_kubevirt.html.erb
@@ -1,6 +1,8 @@
 <%= text_f f, :hostname, :label => _('Hostname'), :required => true %>
 <%= text_f f, :namespace, :label => _('Namespace') %>
 <%= text_f f, :password, :label => _('Token'), :required => true %>
+<%= textarea_f f, :ca_cert, :label => _("X509 Certification Authorities"), :size => "col-md-8",
+  :placeholder => _("Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure.") %>
 
  <div class="col-md-offset-2">
    <%= test_connection_button_f(f, true) %>
