--- a/app/views/compute_resources_vms/form/kubevirt/_volume.html.erb
+++ b/app/views/compute_resources_vms/form/kubevirt/_volume.html.erb
@@ -9,7 +9,7 @@
                 :onchange    => 'pvcSelected(this);',
                 :class => "col-md-2 pvc-name" %>
 
-<%= select_f f, :name, compute_resource.volumes, :attributes, :name,
+<%= select_f f, :name, compute_resource.available_volumes, :attributes, :name,
                { }, :label => _('Persistent Volume'), :label_size => "col-md-2", :disabled => !new_vm, :class => "col-md-2 pvc-selected-volume" %>
 
 <%= text_f f,:capacity, :label => _('Size (GB)'), :value => "", :label_size => "col-md-2", :disabled => !new_vm, :class => "col-md-2 pvc-size" %>
