Improve kubevirt compute resource dialog and validation

--- a/app/views/compute_resources/show/_kubevirt.html.erb
+++ b/app/views/compute_resources/show/_kubevirt.html.erb
@@ -1,11 +1,11 @@
 <tr>
-  <td><%= _("Server") %></td>
-  <td><%= @compute_resource.server_address %></td>
+  <td><%= _("Hostname") %></td>
+  <td><%= @compute_resource.hostname %></td>
 </tr>
 
 <tr>
-  <td><%= _("Port") %></td>
-  <td><%= @compute_resource.server_port %></td>
+  <td><%= _("API Port") %></td>
+  <td><%= @compute_resource.api_port %></td>
 </tr>
 
 <tr>
