--- a/app/views/compute_resources/form/_kubevirt.html.erb
+++ b/app/views/compute_resources/form/_kubevirt.html.erb
@@ -1,7 +1,12 @@
-<%= text_f f, :hostname, :label => _('Hostname'), :required => true %>
-<%= text_f f, :namespace, :label => _('Namespace') %>
-<%= text_f f, :password, :label => _('Token'), :required => true %>
-<%= textarea_f f, :ca_cert, :label => _("X509 Certification Authorities"), :size => "col-md-8",
+<%= text_f f, :hostname, :label => _("Hostname") %>
+<%= text_f f, :api_port, :label => _("API Port"), :required => true %>
+<%= text_f f, :namespace, :label => _("Namespace"), :required => true %>
+<%= password_f f, :password, :label => _("Token"), :required => true,
+              :keep_value => true, :unset => unset_password?,
+              :help_block => _("e.g. eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9..."),
+              :help_inline => documentation_button('5.2.10PasswordEncryption') %>
+
+<%= textarea_f f, :ca_cert, :label => _("X509 Certification Authorities"),
   :placeholder => _("Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure.") %>
 
  <div class="col-md-offset-2">
