--- a/app/views/compute_resources_vms/form/kubevirt/_volume.html.erb
+++ b/app/views/compute_resources_vms/form/kubevirt/_volume.html.erb
@@ -1,16 +1,21 @@
-<% claims = compute_resource.volume_claims %>
-<%= select_f f, :id,
-               claims,
-               :attributes,
-               :name,
-               { :include_blank => _("Create New Claim") },
-               :label => _('Persistent Volume Claim'),
-               :label_size => "col-md-2",
-               :disabled => !new_vm,
-               :onchange    => 'pvcSelected(this);',
-               :class => "col-md-2 pvc-name" %>
+<% storage_classes = compute_resource.storage_classes %>
 
-<%= select_f f, :name, compute_resource.available_volumes, :attributes, :name,
-               { }, :label => _('Persistent Volume'), :label_size => "col-md-2", :disabled => !new_vm, :class => "col-md-2 pvc-selected-volume" %>
+<%= select_f f, :storage_class,
+                compute_resource.storage_classes_for_select,
+                :id,
+                :description,
+                { },
+                :label => _('Storage Class'),
+                :label_size => "col-md-2",
+                :disabled => !new_vm,
+                :class => "col-md-2" %>
+
+<%= text_f f,:name, :label => _('Claim Name'), :value => "", :label_size => "col-md-2", :disabled => !new_vm, :class => "col-md-2 pvc-name" %>
 
 <%= text_f f,:capacity, :label => _('Size (GB)'), :value => "", :label_size => "col-md-2", :disabled => !new_vm, :class => "col-md-2 pvc-size" %>
+
+<% bootable = false %>
+<%= field(f, :bootable, :label => _('Bootable'), :label_size => "col-md-2") do
+  radio_button_f f, :bootable, {:disabled => !new_vm, :value=> 'true', :checked => bootable == 'true', :onclick => 'bootableRadio(this)',
+  :text => _('Only one volume can be bootable')}
+end %>
