Populate interface fields on interfaces tab

--- a/app/views/compute_resources_vms/form/kubevirt/_base.html.erb
+++ b/app/views/compute_resources_vms/form/kubevirt/_base.html.erb
@@ -24,4 +24,4 @@
 <% end %>
 
 <%= compute_specific_js(compute_resource, "nic_info") %>
-<%= compute_specific_js(compute_resource, "volume") %>
+<%= compute_specific_js(compute_resource, "kubevirt") %>
