--- a/app/views/compute_resources_vms/form/kubevirt/_network.html.erb
+++ b/app/views/compute_resources_vms/form/kubevirt/_network.html.erb
@@ -5,11 +5,16 @@
                     :label_size => "col-md-3",
                     :onchange => "cniProviderSelected(this)" %>
 
-<%= select_f f, :network, compute_resource.networks,
+<% pod = f.object.cni_provider == 'pod' %>
+
+<div id='networks' class='<%= 'hide' if pod %>'>
+<%= select_f f, :network,
+                compute_resource.networks,
                 :id,
                 :name,
                 {},
-                :disabled => !new_vm || f.object.cni_provider == 'pod',
+                :disabled => !new_vm || pod,
                 :class => "col-md-3 kubevirt-network",
                 :label => _('Network'),
                 :label_size => "col-md-3" %>
+</div>
