Fixes #26656 - Fix memory issues
The PR fixes few memory issues:
* The memory default value should be a string (same as passed in
arguments)
* Memory default value should be provided as string (this is the
expected format in the VM arguments)
* Tests should be updated no to provide memory or CPU in order to rely
on the defaults
* Memory should be shown in a normalized way in the UI
* When creating VM, the memory should be converted to MB, while before
this PR it was considered to be MiB which lead to a lower amount of
memory than expected.

--- a/app/views/compute_resources_vms/show/_kubevirt.html.erb
+++ b/app/views/compute_resources_vms/show/_kubevirt.html.erb
@@ -20,8 +20,7 @@
       </tr>
       <tr>
         <td><%= _('Memory') %></td>
-        <td><%= number_to_human_size @vm.memory %>
-        </td>
+        <td><%= number_to_human_size @compute_resource.convert_memory_to_bytes(@vm.memory) %></td>
       </tr>
       <tr>
         <td><%= _('Namespace') %></td>
