--- a/app/views/compute_resources_vms/form/kubevirt/_volume.html.erb
+++ b/app/views/compute_resources_vms/form/kubevirt/_volume.html.erb
@@ -1,6 +1,10 @@
 <% if f.object.type.nil? || f.object.type == 'persistentVolumeClaim' %>
+  <% if @set %>
+    <% @set.errors[:vm_attrs].each do | error| %>
+      <%= alert :class => 'alert-danger', :header => '', :text => error %>
+    <% end %>
+  <% end %>
   <% storage_classes = compute_resource.storage_classes %>
-
   <%= select_f f, :storage_class,
                   compute_resource.storage_classes_for_select,
                   :id,
@@ -10,7 +14,6 @@
                   :label_size => "col-md-2",
                   :disabled => !new_vm,
                   :class => "col-md-2" %>
-
   <%= text_f f,:capacity, :label => _('Size (GB)'), :label_size => "col-md-2", :disabled => !new_vm, :class => "col-md-2 pvc-size" %>
 
   <% bootable = f.object.boot_order.nil? ? false : f.object.bootable %>
