allow to enter arbitrary data for the network
this is useful when the suggestion list is empty

--- a/app/views/compute_resources_vms/form/kubevirt/_network.html.erb
+++ b/app/views/compute_resources_vms/form/kubevirt/_network.html.erb
@@ -13,6 +13,7 @@
                 :id,
                 :name,
                 {},
+                :data => { tags: true },
                 :disabled => !new_vm || pod,
                 :class => "col-md-3 kubevirt-network",
                 :label => _('Network'),
