explicitly add the set network to the list of networks

--- a/app/views/compute_resources_vms/form/kubevirt/_network.html.erb
+++ b/app/views/compute_resources_vms/form/kubevirt/_network.html.erb
@@ -9,7 +9,7 @@
 
 <div id='networks' class='<%= 'hide' if pod %>'>
 <%= select_f f, :network,
-                compute_resource.networks,
+                (compute_resource.networks + [OpenStruct.new(name: f.object.network, id: f.object.network)]).compact.uniq,
                 :id,
                 :name,
                 {},
