allow to enter arbitrary data for the network (#175)
* allow to enter arbitrary data for the network

this is useful when the suggestion list is empty

* explicitly add the set network to the list of networks

* mark network interfaces as always editable

* return namespaced network names

--- a/app/views/compute_resources_vms/form/kubevirt/_network.html.erb
+++ b/app/views/compute_resources_vms/form/kubevirt/_network.html.erb
@@ -9,10 +9,11 @@
 
 <div id='networks' class='<%= 'hide' if pod %>'>
 <%= select_f f, :network,
-                compute_resource.networks,
+                (compute_resource.networks + [OpenStruct.new(name: f.object.network, id: f.object.network)]).compact.uniq,
                 :id,
                 :name,
                 {},
+                :data => { tags: true },
                 :disabled => !new_vm || pod,
                 :class => "col-md-3 kubevirt-network",
                 :label => _('Network'),
