--- a/app/views/compute_resources_vms/index/_kubevirt.html.erb
+++ b/app/views/compute_resources_vms/index/_kubevirt.html.erb
@@ -12,7 +12,7 @@
     <tr>
       <td><%= link_to_if_authorized vm.name, hash_for_compute_resource_vm_path(:compute_resource_id => @compute_resource, :id => vm.identity).merge(:auth_object => @compute_resource, :auth_action => 'view', :authorizer => authorizer) %></td>
       <td><%= vm.cpu_cores %></td>
-      <td><%= number_to_human_size @compute_resource.convert_memory_to_bytes(vm.memory) %></td>
+      <td><%= number_to_human_size vm.memory %></td>
       <td>
         <span <%= vm_power_class(vm.ready?) %>>
           <%= vm_state(vm) %></span>
